--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "author": "Bruno Futema <bruno.futema@outlook.com>",
   "license": "MIT",
   "devDependencies": {
-    "git-commit-msg-linter": "^4.5.0"
+    "@types/node": "^18.11.18",
+    "git-commit-msg-linter": "^4.5.0",
+    "typescript": "^4.9.4"
   }
 }
