--- a/.prettierignore
+++ b/.prettierignore
@@ -4,10 +4,13 @@ node_modules
 # Build
 build
 dist
+lib
 
 # Tests
 coverage
 
-# Environments
-.env
-yarn-error.log
+# Setup
+/*.js
+/*.ts
+**/*.d.ts
+**/*.hbs
