--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-unused-imports": "^2.0.0",
     "git-commit-msg-linter": "^4.5.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.1.0",
     "prettier": "^2.8.2",
     "typescript": "^4.9.4"
   }
