--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Bruno Futema <bruno.futema@outlook.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^29.2.5",
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
@@ -18,8 +19,10 @@
     "eslint-plugin-unused-imports": "^2.0.0",
     "git-commit-msg-linter": "^4.5.0",
     "husky": "^8.0.3",
+    "jest": "^29.3.1",
     "lint-staged": "^13.1.0",
     "prettier": "^2.8.2",
+    "ts-jest": "^29.0.5",
     "typescript": "^4.9.4"
   }
 }
